Bug 60896 - Double click in Special Characters picker inserts nothing
Summary: Double click in Special Characters picker inserts nothing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: All All
: medium minor
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-15 13:39 UTC by Urmas
Modified: 2013-09-28 17:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (7.77 KB, image/png)
2013-02-20 01:26 UTC, Urmas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Urmas 2013-02-15 13:39:05 UTC
With Character picker available for some textboxes, double-clicking a character just closes the dialog without inserting that character.
Comment 1 Joel Madero 2013-02-19 03:50:24 UTC
not enough information, marking as NEEDINFO.

"some textboxes" "double clicking a character"

Not sure what "some" means, or what character.

I did this:

1. Open writer
2. Insert -> Special Character
3. Double clicked on U+00BE(190)

Result was the correct symbol being placed. 

It makes it very hard for QA not to waste time when reproducible steps are not provided, please keep this in mind going forward with your bug reporting
Comment 2 Urmas 2013-02-19 19:15:24 UTC
Actually it is in a context menu EACH UI TEXTBOX (including the one in the Find Toolbar).

Actually, QA not knowing their product wastes USERS' time which is much worse.
Comment 3 Joel Madero 2013-02-19 19:21:15 UTC
Not providing detailed steps wastes QA time
Comment 4 Urmas 2013-02-20 01:26:27 UTC
Created attachment 75149 [details]
Screenshot
Comment 5 Adolfo Jayme Barrientos 2013-02-26 06:11:28 UTC
Confirmed the problem un Ubuntu 13.04, LibO 4.0.0 following these steps:

1.- Open Writer
2.- Right-click in the Font combobox and select “Special Character…”
3.- The Special Character dialog will appear, double-click in a character
4.- The dialog will close immediately, and the character won’t be inserted in the combobox. (But as Urmas points out before his rant, this problem exists in every text field, try the Find toolbar, the Find & Replace dialog, the Character dialog…)
Comment 6 Adolfo Jayme Barrientos 2013-02-26 06:16:14 UTC
(Note that, if you click OK instead of double-clicking the character, it is inserted in the field correctly.)
Comment 7 Joel Madero 2013-02-26 06:18:31 UTC
Thanks Fitoschido :) Did you test using master? Was this a problem with older versions as well?
Comment 8 Adolfo Jayme Barrientos 2013-02-26 06:34:03 UTC
Nope Joel, I tested 4.0.0.2, which is currently in the Ubuntu Raring repos. And I don’t know when this problem appeared, I’ve never needed to insert a special character in a field by right-clicking on it :-P (I just use Ctrl+Shift+U+<unicode number>+Enter).
Comment 9 Commit Notification 2013-09-28 17:35:53 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3fd01d00c2299aed55d11d59d3b6fdabbab8404b

fdo#60896: Double click in Special Characters picker inserts nothing



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.