fdo#60896: Double click in Special Characters picker inserts nothing

Change-Id: I9957d720231b3f2ff8e7869c7133fd8e29550e1f